angular barely working

--- a/WebPagePurrcation/P2-WebApp/src/app/app.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>Purrcation</h1>
 <nav>
-  <a routerLink = "/units">Units</a>
+  <a routerLink = "/login">Log In</a> 
+  <a routerLink = "/new-user">Register as New User</a>
 </nav>
 <router-outlet></router-outlet>
 
