--- a/WebPagePurrcation/P2-WebApp/src/app/login/login.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/login/login.component.html
@@ -1,1 +1,14 @@
-<p>login works!</p>
+<form>
+  <div>
+    <input type = "text" #email>
+  </div>
+  <div>
+    <input type="password" #password>
+  </div>
+  <div>
+    <button (click) = "saveValues(email.value, password.value)">Log In</button>
+  </div>
+  <div>
+    {{num}}
+  </div>
+</form>
