--- a/WebPagePurrcation/P2-WebApp/src/app/comments/comments.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/comments/comments.component.html
@@ -1,1 +1,11 @@
-<p>comments works!</p>
+<h2>Browse Comments</h2>
+<button (click)="showComments()">View Units</button>
+<div *ngIf="seeComments; then commentBlock;"></div>
+<ng-template #commentBlock>
+  <ul class="comments">
+    <li *ngFor = "let comment of comments">
+      <a routerLink = "details/{{comment.Comment_ID}}"></a>
+      <span class = "tile">{{comment.Comment_ID}}</span> {{comment.Content}}
+    </li>
+  </ul>
+</ng-template>
