angular login still broken can't get anything out of object after response is retrieved

--- a/WebPagePurrcation/P2-WebApp/src/app/comments/comments.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/comments/comments.component.html
@@ -5,7 +5,7 @@
   <ul class="comments">
     <li *ngFor = "let comment of comments">
       <a routerLink = "details/{{comment.Comment_ID}}"></a>
-      <span class = "tile">{{comment.Comment_ID}}</span> {{comment.Content}}
+      <span class = "tile">{{comment.Comment_ID}}</span> {{comment.Content}}, {{comment.Rating}}
     </li>
   </ul>
 </ng-template>
