hero listings works and is integrated successfully

--- a/WebPagePurrcation/P2-WebApp/src/app/app.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>Purrcation</h1>
 <nav>
   <a routerLink = "/login">Log In</a> 
-  <a routerLink = "/new-user">units</a>
+  <a routerLink = "/new-user">New User</a>
 </nav>
 <router-outlet></router-outlet>
 
