--- a/WebPagePurrcation/P2-WebApp/src/app/units/units.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/units/units.component.html
@@ -1,12 +1,22 @@
-<h2>Browse Units</h2>
-<button (click)="showUnits()">View Units</button>
-<div *ngIf="seeUnits; then unitsBlock;"></div>
-<ng-template #unitsBlock>
-  <ul class="units">
-    <li *ngFor = "let unit of units">
-      <a routerLink = "details/{{unit.Address}}"></a>
-      <span class = "tile">{{unit.Address}}</span> {{unit.Unit_Desciption}}
-    </li>
-  </ul>
-</ng-template>
+<div style="text-align:center">
+  <h1>
+    Welcome to Purrcation!
+  </h1>
+  <br/>
+  <!--Truncated for brevity -->
+<!--<button (click)="getData()">Fetch Data</button>-->
+</div>
+<div class="" *ngFor="let unit of units" style="text-align:center">
+<h3>
+   {{ unit.Address }} &nbsp; {{ unit.City }} &nbsp; {{ unit.State }}
+ </h3>
+ <h4>Cat price per night ${{ unit.Price_Night_Cat }} </h4>
+
+ 
+ <br>
+ <a routerLink = "new-user/{{unit.Unit_ID}}">
+  <button class="button">Select</button>
+ </a>
+ 
+</div>
 
