added id to image

--- a/WebPagePurrcation/P2-WebApp/src/app/units/units.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/units/units.component.html
@@ -11,7 +11,7 @@
    {{ unit.Address }} &nbsp; {{ unit.City }} &nbsp; {{ unit.State }}
  </h3>
  <h4 id = "price">Cat price per night ${{ unit.Price_Night_Cat }} </h4>
- <img width="200" alt="thumbnail" [src]="unit.Photo_URL">
+ <img id = "image" width="200" alt="thumbnail" [src]="unit.Photo_URL">
 
  
  <br>
