unit details operational just need to display info in css and html

--- a/WebPagePurrcation/P2-WebApp/src/app/app.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/app.component.html
@@ -2,6 +2,7 @@
 <nav>
   <a routerLink = "/login">Log In</a> 
   <a routerLink = "/new-user">New User</a>
+  <a routerLink = "/owner-login">Owner Log In</a>
 </nav>
 <router-outlet></router-outlet>
 
