--- a/WebPagePurrcation/P2-WebApp/src/app/units/units.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/units/units.component.html
@@ -15,7 +15,7 @@
 
  
  <br>
- <a routerLink = "new-user/{{unit.Unit_ID}}">
+ <a routerLink = "/unit-details/{{unit.Unit_ID}}">
   <button class="button">Select</button>
  </a>
  
