--- a/WebPagePurrcation/P2-WebApp/src/app/owner-units/owner-units.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/owner-units/owner-units.component.html
@@ -3,6 +3,8 @@
       Welcome to Purrcation!
     </h1>
     <br/>
+
+    <a routerLink="/add-unit">Add Unit?</a>
     <!--Truncated for brevity -->
   <!--<button (click)="getData()">Fetch Data</button>-->
   </div>
