--- a/WebPagePurrcation/P2-WebApp/src/app/owner-login/owner-login.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/owner-login/owner-login.component.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html>
+  <head>
+<meta charset="utf-8" />
+<title>Owner Login</title>
+<link href="./owner-login.component.css" rel="stylesheet" />
+<link rel="apple-touch-icon" sizes="180x180" href="../../../../FaviconCat/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="../../../../FaviconCat/favicon-16x16.png">
+<link rel="manifest" href="../../../../FaviconCat/site.webmanifest">
+</head>
+<body>
+ 
 <form>
     <div>
       <input type = "text" #username>
@@ -23,3 +35,7 @@
       </ng-template>
     </ng-template>
   </form>
+   
+</body>
+
+  </html>
