--- a/WebPagePurrcation/P2-WebApp/src/app/owner-units/owner-units.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/owner-units/owner-units.component.html
@@ -1,23 +1,40 @@
-<div style="text-align:center">
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Owner Units</title>
+  <link href="./owner-units.component.css" rel="stylesheet" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../../../../FaviconCat/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../../../../FaviconCat/favicon-16x16.png">
+  <link rel="manifest" href="../../../../FaviconCat/site.webmanifest">
+</head>
+
+<body>
+
+  <div style="text-align:center">
     <h1>
       Welcome to Purrcation!
     </h1>
-    <br/>
+    <br />
 
     <a routerLink="/add-unit">Add Unit?</a>
     <!--Truncated for brevity -->
-  <!--<button (click)="getData()">Fetch Data</button>-->
+    <!--<button (click)="getData()">Fetch Data</button>-->
   </div>
   <div class="forloop" *ngFor="let unit of units" style="text-align:center">
-  <h3 id = "">
-     {{ unit.Address }} &nbsp; {{ unit.City }} &nbsp; {{ unit.State }}
-   </h3>
-   <h4 id = "price">Cat price per night ${{ unit.Price_Night_Cat }} </h4>
-   <img id = "image" width="200" alt="thumbnail" [src]="unit.Photo_URL">
-   <br>
-   <a routerLink = "/unit-details/{{unit.Unit_ID}}">
-    <button class="button">Select</button>
-   </a>
-   
+    <h3 id="">
+      {{ unit.Address }} &nbsp; {{ unit.City }} &nbsp; {{ unit.State }}
+    </h3>
+    <h4 id="price">Cat price per night ${{ unit.Price_Night_Cat }} </h4>
+    <img id="image" width="200" alt="thumbnail" [src]="unit.Photo_URL">
+    <br>
+    <a routerLink="/unit-details/{{unit.Unit_ID}}">
+      <button class="button">Select</button>
+    </a>
+
   </div>
-  
+
+</body>
+
+</html>
