--- a/WebPagePurrcation/P2-WebApp/src/app/unit-details/unit-details.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/unit-details/unit-details.component.html
@@ -1,2 +1,14 @@
-<p>unit-details works!</p>
-<app-comments></app-comments>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <title>Unit Details</title>
+        <link href="./unit-details.component.css" rel="stylesheet" />
+        <link rel="apple-touch-icon" sizes="180x180" href="../../../../FaviconCat/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="../../../../FaviconCat/favicon-16x16.png">
+        <link rel="manifest" href="../../../../FaviconCat/site.webmanifest"> 
+    </head>
+    <body>
+        
+    </body>
+</html>
