--- a/WebPagePurrcation/P2-WebApp/src/app/new-user/new-user.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/new-user/new-user.component.html
@@ -1,1 +1,38 @@
-<p>new-user works!</p>
+<div style="text-align:center">
+    <form action="/action_page.php" style="border:1px solid #ccc">
+      <div class="container">
+        <h1>Sign Up</h1>
+        <p>Please fill in this form to create an account.</p>
+        <hr>
+    
+        
+  
+        <label for="Fname"><b>First Name</b></label>
+        <input type="text" id="Fname" placeholder="Enter First Name" name="Fname" #Fname required>
+  
+        <label for="Lname"><b>Last Name</b></label>
+        <input type="text" id="Lname" placeholder="Enter Last Name" name="Lname" #Lname required>
+  
+        <label for="Email"><b>Email</b></label>
+        <input type="text" id="Email" placeholder="Enter Email" name="Email" #Email required>
+    
+        <label for="psw"><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="psw"  #psw required>
+    
+        <label for="psw-repeat"><b>Repeat Password</b></label>
+        <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+        
+        <label>
+          <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+        </label>
+  
+        <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+        <div class="clearfix">
+       
+          <button  (click)="postData(Email.value+':'+psw.value+':'+Fname.value+':'+Lname.value)">Sign up</button>
+  
+        </div>
+      </div>
+    </form>
+</div>
+
