--- a/WebPagePurrcation/P2-WebApp/src/app/units/units.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/units/units.component.html
@@ -22,7 +22,7 @@
     {{ unit.Address }} &nbsp; {{ unit.City }} &nbsp; {{ unit.State }}
   </h3>
   <h4 id = "price">Cat price per night ${{ unit.Price_Night_Cat }} </h4>
-  
+  <p id="rating"> Rating: {{ unit.Rating }}</p>
   </button>
  </a>
  
