--- a/WebPagePurrcation/P2-WebApp/src/app/unit-details/unit-details.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/unit-details/unit-details.component.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Unit Details</title>
-        <link href="./unit-details.component.css" rel="stylesheet" />
-        <link rel="apple-touch-icon" sizes="180x180" href="../../../../FaviconCat/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="../../../../FaviconCat/favicon-16x16.png">
-        <link rel="manifest" href="../../../../FaviconCat/site.webmanifest"> 
-    </head>
-    <body>
-        
-    </body>
+
+<head>
+    <meta charset="utf-8" />
+    <title>Unit Details</title>
+    <link href="./unit-details.component.css" rel="stylesheet" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../../../../FaviconCat/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../../../FaviconCat/favicon-16x16.png">
+    <link rel="manifest" href="../../../../FaviconCat/site.webmanifest">
+</head>
+
+<body>
+    <h2>{{ unit[0].Address }} &nbsp; {{ unit[0].City }} <br> {{ unit[0].State }} &nbsp; {{ unit[0].Zip_Code }}</h2>
+    <div>
+        <img id="unitPic" [src]="unit[0].Photo_URL">
+    </div>
+    <div id="description"> {{ unit[0].Unit_Desciption }}</div>
+    <app-comments></app-comments>
+    <h3>{{ unit[0].Price_Night_Cat }}</h3>
+</body>
+
 </html>
