--- a/WebPagePurrcation/P2-WebApp/src/app/comments/comments.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/comments/comments.component.html
@@ -15,6 +15,8 @@
       Leave a Rating:
       <input id = "rating" type="range" name="rating" min="0" max="5" #rating>
     </div>
-    <button (click) = "submitComment(review.value, rating.value)">Submit</button>
+    <div>
+      <button (click) = "submitComment(review.value +':'+ rating.value)">Submit</button>
+    </div>
   </form>
 </ng-template>
