booking button is good

--- a/WebPagePurrcation/P2-WebApp/src/app/add-unit/add-unit.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/add-unit/add-unit.component.html
@@ -1,5 +1,8 @@
 <form>
     <div>
+        User ID: <input type = "text" #id>
+    </div>
+    <div>
         Address: <input type = "text" #address>
     </div>
     <div>
@@ -25,4 +28,4 @@
         Max Guest Cats at One Time: <input id = "maxGuests" type="range" name="maxGuests" min="0" max="5" #maxGuests>
     </div>
   </form>
-  <button (click) = "submitUnit(address.value +':'+ city.value +':'+ state.value +':'+ zip.value +':'+ picture.value +':'+ description.value +':'+ price.value +':'+ maxGuests.value)">Submit</button>
+  <button (click) = "submitUnit(address.value +':'+ city.value +':'+ state.value +':'+ zip.value +':'+ picture.value +':'+ description.value +':'+ price.value +':'+ maxGuests.value +':'+ id.value)">Submit</button>
