Formatting to unit details page

--- a/WebPagePurrcation/P2-WebApp/src/app/unit-details/unit-details.component.css
+++ b/WebPagePurrcation/P2-WebApp/src/app/unit-details/unit-details.component.css
@@ -1,4 +1,13 @@
-#unitPic {
-    max-height: 50%;
-    max-width: 50%;
+
+img {
+    max-width: 40%;
+    max-height: 40%;
+    margin:0pt;
+    z-index: -1;
+    float:left;
+    margin:2em;
+}
+.unitDetails {
+    
+    float:left
 }
