--- a/WebPagePurrcation/P2-WebApp/src/app/unit-details/unit-details.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/unit-details/unit-details.component.html
@@ -19,12 +19,20 @@
     <h3>Price per night: ${{ unit[0].Price_Night_Cat }}</h3>
     <div id="description">Description: {{ unit[0].Unit_Desciption }}</div>
     <app-comments></app-comments>
-    </span>
-</body>
-<button (click)="submitBooking()">Submit Booking</button>
+    <br><br>
+    <form action="action_page.php">
+        <label for="checkInDate">Check-In Date: </label>
+        <input type="date" id="checkInDate">
+        <label for="checkOutDate">Check-Out Date:</label>
+        <input type="date" id="checkOutDate">
+    </form>
+    <button (click)="submitBooking()">Submit Booking</button>
 <div *ngIf="submitted; then submitblock;"></div>
 <ng-template #submitblock>
     Booking Confirmed
 </ng-template>
+    </span>
+</body>
+
 
 </html>
