--- a/WebPagePurrcation/P2-WebApp/src/app/login/login.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/login/login.component.html
@@ -12,7 +12,7 @@
 
 <form>
   <div>
-    <input type = "text" #username>
+    <input type = "text" placeholder="username/email" #username>
   </div>
   <div>
     <input type="password" #password>
