Changed Logo.png to .jpg, added logo to Page

--- a/WebPagePurrcation/P2-WebApp/src/app/app.component.html
+++ b/WebPagePurrcation/P2-WebApp/src/app/app.component.html
@@ -11,10 +11,7 @@
 </head>
 
 <body>
-
-    <h1>
-      Welcome to Purrcation!
-    </h1>
+  <img id="logo" src="../../../Logo.jpg" alt="logo"><h1>Welcome to Purrcation!</h1> 
     
   <nav class="topnav">
     <a id="userLoginLink" routerLink="/login" href="#login">Log In</a> 
