--- a/WebPagePurrcation/P2-WebApp/src/app/app.component.css
+++ b/WebPagePurrcation/P2-WebApp/src/app/app.component.css
@@ -41,3 +41,12 @@ body{
     background-color: #04AA6D;
     color: white;
   }
+
+  h1 {
+    display: inline;
+  }
+
+  #logo {
+    width: 10%;
+    height: auto;
+  }
